# chatbot-RAG-Milvus-vector-db

./: .env  README.md  app.py  get_model_features.py  pyproject.toml  requirement.txt
ChatBot1/: chatbot.py  load.py  preprocess.py  prompt.py  setModel.py  vector_db.py
data/: ammi_program.txt
tempDir/: ammi_program.docx
volumes/milvus/data/insert_log/451012829854156881/451012829854156882/451012829854156896/0/: 451012829852729603
volumes/milvus/data/insert_log/451012829854156881/451012829854156882/451012829854156896/1/: 451012829852729604
volumes/milvus/etcd/member/snap/: 000000000000000d-00000000000186a1.snap  db
volumes/milvus/rdb_data/: 000142.sst  000144.sst  000145.sst  000147.sst  000148.sst  000150.sst  IDENTITY  LOG  LOG.old.1718634459337468  LOG.old.1718746441387584  LOG.old.1719222183930801  LOG.old.1719222242420118  LOG.old.1719325806488583  LOG.old.1719339595178564  LOG.old.1719580920319553  LOG.old.1719850753035403  LOG.old.1719850798641670  LOG.old.1719851929359255  LOG.old.1719999000315906  LOG.old.1720118044218870  LOG.old.1720477407992272  MANIFEST-000136
volumes/milvus/rdb_data_meta_kv/: 000114.sst  IDENTITY  LOG  LOG.old.1718634459265305  LOG.old.1718746441030442  LOG.old.1719222182943890  LOG.old.1719222242332895  LOG.old.1719325806205402  LOG.old.1719339594384496  LOG.old.1719580920177634  LOG.old.1719850752853953  LOG.old.1719850798560997  LOG.old.1719851929325284  LOG.old.1719999000239150  LOG.old.1720118043157457  LOG.old.1720477407915119  MANIFEST-000110
(+4 files in other folders)
